<resources>
    <string name="app_name">My Little Shop</string>
    <string name="detail_activity">Details</string>
    <string name="category_product_name">Item name</string>
    <string name="category_price">Price</string>
    <string name="category_quantity">Quantity</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_product_name">Name</string>
    <string name="hint_price">Price</string>
    <string name="unit_price">$</string>
    <string name="button_order">Order from supplier</string>
    <string name="button_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="editor_insert_item_successful">Item saved</string>
    <string name="editor_insert_item_failed">Error with saving item</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Entries</string>
    <string name="empty_view_title_text">Out of stock!</string>
    <string name="empty_view_subtitle_text">Get started by adding an item</string>
    <string name="editor_activity_title_new_item">Add an Item</string>
    <string name="editor_activity_title_edit_item">Edit Item</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_item_successful">Item deleted</string>
    <string name="editor_delete_item_failed">Error with deleting item</string>
    <string name="delete_dialog_msg">Delete this item?</string>
    <string name="delete_all_dialog_msg">Delete all items? This cannot be undone.</string>
    <string name="cancel">Cancel</string>
    <string name="price_text">Price:</string>
    <string name="price_tag">$</string>
    <string name="quantity_tag">In stock:</string>
    <string name="button_sell">Sell</string>

</resources>
