<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/button_sell"
        android:layout_toStartOf="@+id/button_sell"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingTop="8dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D"
            tools:text="LaSportiva Miura" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/price_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/price_text"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#757575"
                tools:text="Price:" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingLeft="4dp"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#616161"
                tools:text="350" />

            <TextView
                android:id="@+id/price_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingLeft="4dp"
                android:text="@string/price_tag"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#616161"
                tools:text="$" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/quantity_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/quantity_tag"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#757575"
                tools:text="In Stock:" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingLeft="4dp"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#757575"
                tools:text="5" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_sell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/button_sell" />


</RelativeLayout>